[package]
name = "monolith_solver"
version = "0.1.0"
authors = ["g <ggg@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.7"
rand = "0.7"
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
